--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+<div style="text-align:center">
+  <img src="{{ site.baseurl }}/images/fluentpython-cover.jpeg" style="float: right; margin: 20px;"/>
+</div>
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+### Welcome fellow Pythonistas,
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+If you are someone who has some python knowledge ie, you know enough to make the computer do what you want with python, then the [Fluent Python](https://www.goodreads.com/book/show/22800567-fluent-python) book will make you dangerous. This book will help you understand some of the intricate aspects of python and the standard library. This book will help you understand what you actually mean by pythonic code and this is a book I always recommend to people who have some experience in python but are hungry for more. 
 
-You can edit the `index.html` file to change this content.
 
-# Posts
+But this is not something you can read and we done with in a week or even a month. You will have to try out each of the examples and play with it to truely grasp the concepts. Personally I found that keeping my notes and the examples in a Jupyter Notebook to be really helpfull here. This way I get to play around with the code and understand it and add my own remarks and learnings to it. So as I started diving into the book I started building an active set of notebooks for reference and I found these notebooks so helpfull that I thought I would share them with you too! 
+
+The original repo is [here](https://github.com/jjmachan/Fluent-Python-Notes) but now with the help of [fastpages]() I'm planning to make it even more polished website. I'll be adding each chapter as a jupyter notebook which will contain the examples and the some insights I learned. The notes on each chapter can be viewed here or you can open the notebook in colab by clicking on the colab badge or clone it locally to start playing with the code and experiment with the concepts your self.
+
+Do note that *this is just for personal use and all rights to code and material belong to the owners*. More importantly I would like to thank [Luciano Ramalho](https://twitter.com/ramalhoorg) for putting out this awesome book! I can't tell you how much I've learned from this book. This website is just the reference and I would highly recommend that you buy the book for yourself and go through it but I sincierly hope these notes also help you in someway through your journey :)
+
+
+
+# Chapters
