changed root of website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 <div style="text-align:center">
-  <img src="{{ site.baseurl }}/images/fluentpython-cover.jpeg" style="float: right; margin: 20px;"/>
+  <img src="{{ site.baseurl }}/images/fluentpython-cover.png" style="float: right; margin: 20px;"/>
 </div>
 
 
