deploy: 36b85281aacc879519dd06c2661188b377e8b296

--- a/404.html
+++ b/404.html
@@ -10,13 +10,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="My notes from the best book for intermediate python." />
 <meta property="og:description" content="My notes from the best book for intermediate python." />
-<link rel="canonical" href="https://jjmachan.github.io/fluent-python/404.html" />
-<meta property="og:url" content="https://jjmachan.github.io/fluent-python/404.html" />
+<link rel="canonical" href="https://fluentpython.jjmachan.in/404.html" />
+<meta property="og:url" content="https://fluentpython.jjmachan.in/404.html" />
 <meta property="og:site_name" content="Fluent-Python Notes" />
 <script type="application/ld+json">
-{"url":"https://jjmachan.github.io/fluent-python/404.html","@type":"WebPage","headline":"Fluent-Python Notes","description":"My notes from the best book for intermediate python.","@context":"https://schema.org"}</script>
+{"url":"https://fluentpython.jjmachan.in/404.html","@type":"WebPage","headline":"Fluent-Python Notes","description":"My notes from the best book for intermediate python.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/fluent-python/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jjmachan.github.io/fluent-python/feed.xml" title="Fluent-Python Notes" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://fluentpython.jjmachan.in/feed.xml" title="Fluent-Python Notes" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
@@ -31,7 +31,7 @@
 </script>
 
 
-<link rel="shortcut icon" type="image/x-icon" href="/fluent-python/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 <script>
@@ -66,7 +66,7 @@ window.onload = wrap_img;
 </head>
 <body><header class="site-header">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/fluent-python/">Fluent-Python Notes</a></div>
+  <div class="wrapper"><a class="site-title" rel="author" href="/">Fluent-Python Notes</a></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -92,16 +92,16 @@ window.onload = wrap_img;
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/fluent-python/"></data>
+  <data class="u-url" href="/"></data>
 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/fluent-python/feed.xml">
+          <a href="/feed.xml">
             <svg class="svg-icon orange">
-              <use xlink:href="/fluent-python/assets/minima-social-icons.svg#rss"></use>
+              <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
           </a>
         </p>
@@ -111,7 +111,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/jjmachan" title="jjmachan"><svg class="svg-icon grey"><use xlink:href="/fluent-python/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/jjmachan" title="jjmachan"><svg class="svg-icon grey"><use xlink:href="/fluent-python/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/jjmachan" title="jjmachan"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/jjmachan" title="jjmachan"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
